update swagger doc (change tag)
